# Snellius-example-project

./: .gitignore  README.md  experiments_settings.json  job_script_Snellius.sh  pyproject.toml  run_experiment.py
Snellius setup/: constants.py  experiment_settings_constructor.py  job_script_constructor.py
results/: log_job_script_Snellius.sh
src/: instances.py  methods.py  run_method.py  utilities.py
